--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,14 @@ body{
 li {
 	list-style: none;
 }
-.gem{
-	height: 100px;
-	width: 100px;
+.gemPics{
+	display: flex;
+	justify-content: center;
 }
 .jumbotron{
 	opacity: 0.8;
+}
+img {
+	height: 20%;
+	width: 20%;
 }
