--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 body{
 	background-image: url(../images/caves.jpg);
-	  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 li {
 	list-style: none;
@@ -15,7 +15,7 @@ li {
 .jumbotron{
 	background-color:rgba(0,0,0,0.5);
 }
-img {
-	height: 20%;
-	width: 20%;
+.center-text{
+	margin-left: 15em;
+	margin-right: 15em;
 }
